dengue mas links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">  
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="https://steyker4.github.io/carlosT/">inicio</a>
+      <a class="nav-link" href="https://steyker4.github.io/tananta11/">inicio</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#section1">¿Que es?</a>
@@ -164,21 +164,21 @@ Determinados análisis de laboratorio detectan evidencia de los virus del dengue
  
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <a title="bullying" href="file:///F:/usuarios/alumno/Escritorio/bootstrap/pagina%204%20bullying/hola%204.html"><img src="bullying.jpg" alt="buling" style="width:100%;height:60%;" /></a>
+        <a title="bullying" href="https://steyker4.github.io/tananta4/"><img src="bullying.jpg" alt="buling" style="width:100%;height:60%;" /></a>
         <div class="carousel-caption">
             <h3>bullyng</h3>
             <p>el maltrato de niños hacia otros niños</p>
           </div>
       </div>
       <div class="carousel-item">
-        <a title="chikunguya" href="file:///F:/usuarios/alumno/Escritorio/bootstrap/pagina%202%20chikunguya/hola%202.html"><img src="mosquito.jpg" alt="chikunguya" style="width:100%;height:60%;" /></a>
+        <a title="chikunguya" href="https://steyker4.github.io/tananta2/"><img src="mosquito.jpg" alt="chikunguya" style="width:100%;height:60%;" /></a>
         <div class="carousel-caption">
             <h3>Chikunguya</h3>
             <p>igual de peligroso que el dengue</p>
           </div>
       </div>
       <div class="carousel-item">
-        <a title="covid19" href="file:///F:/usuarios/alumno/Escritorio/bootstrap/pagina%203%20coronavirus/hola%203.html"><img src="covid19.jpg" alt="coronavirus" style="width:100%;height:60%;" /></a>
+        <a title="covid19" href="https://steyker4.github.io/tananta3/"><img src="covid19.jpg" alt="coronavirus" style="width:100%;height:60%;" /></a>
         <div class="carousel-caption">
             <h3>Covid-19</h3>
             <p>la nueva pandemia que contagia a todo el mundo</p>
@@ -204,19 +204,19 @@ Determinados análisis de laboratorio detectan evidencia de los virus del dengue
       <a href="#demos1" class="btn btn-outline-secondary" data-toggle="collapse">ver mas...</a>
       <div id="demos1" class="collapse">
       <br><p><strong>Acoso escolar y a toda forma de maltrato físico, verbal o psicológico que se produce entre escolares, de forma reiterada y a lo largo del tiempo.<br><br><br>
-        <button type="button" class="btn btn-outline-secondary"><a href=file:///F:/usuarios/alumno/Escritorio/bootstrap/pagina%204%20bullying/hola%204.html style="color:rgb(216, 216, 216)";>mas informacion</a>
+        <button type="button" class="btn btn-outline-secondary"><a href=https://steyker4.github.io/tananta4/ style="color:rgb(216, 216, 216)";>mas informacion</a>
         </strong></p></div></div>
     <div class="col"><h2>Chikunguya</h2>
       <a href="#demos2" class="btn btn-outline-secondary" data-toggle="collapse">ver mas...</a>
       <div id="demos2" class="collapse">
       <br><p><strong> Enfermedad vírica transmitida al ser humano por mosquitos infectados. Además de fiebre y fuertes dolores articulares, produce otros síntomas, tales como dolores musculares, dolores de cabeza, náuseas, cansancio y erupciones cutáneas.<br>
-        <button type="button" class="btn btn-outline-secondary"><a href=file:///F:/usuarios/alumno/Escritorio/bootstrap/pagina%202%20chikunguya/hola%202.html style="color:rgb(216, 216, 216)";>mas informacion</a>
+        <button type="button" class="btn btn-outline-secondary"><a href=https://steyker4.github.io/tananta2/ style="color:rgb(216, 216, 216)";>mas informacion</a>
         </strong></p></div></div>
     <div class="col"><h2>Covid-19</h2>
       <a href="#demos3" class="btn btn-outline-secondary" data-toggle="collapse">ver mas...</a>
       <div id="demos3" class="collapse">
       <br><p><strong>Enfermedad infecciosa causada por el coronavirus que se ha descubierto más recientemente. Tanto el nuevo virus como la enfermedad eran desconocidos antes de que estallara el brote en Wuhan (China) en diciembre de 2019.<br>
-        <button type="button" class="btn btn-outline-secondary"><a href=file:///F:/usuarios/alumno/Escritorio/bootstrap/pagina%203%20coronavirus/hola%203.html style="color:rgb(216, 216, 216)";>mas informacion</a>
+        <button type="button" class="btn btn-outline-secondary"><a href=https://steyker4.github.io/tananta3/ style="color:rgb(216, 216, 216)";>mas informacion</a>
         </strong></p></div>
   </div>
   </div>
